# record-audio

./: README.md
cpp/: CMakeLists.txt  main.cc  record.cc  record.h
python/: play.py  requirements.txt
